LU-521 make LST support variable page size

LNet selftest can't support variable page size because it sends
number of pages over the wire.
We have to change wire format to fix this but it will have compatibility
issue, so this patch also implemented "session version" for LST to
resolve compatibility issue, only new version LST can understand new
bulk RPC format, although new LST nodes still can communicate with old
LST nodes.  This feature requires all nodes in the cluster are running
with the same session version, which means if there are some nodes are
running old version LST, those nodes with new LST also have to run with
compatible old version by setting env variable LST_VERSION.
Please see the Jira ticket (LU-521) for more details.

Change-Id: I889b4023995ab2fde28b8de79977379e2f291cd0
Signed-off-by: Liang Zhen <liang@whamcloud.com>